# cislang

./: README.md  ka_df.csv  main.py  pyproject.toml  statusname.ru.ipynb  updated_filter.ipynb
cislang/: filter.py  georgian_tst.csv  georgian_tst_academics.csv  georgian_tst_activists.csv  georgian_tst_births_batumi.csv  georgian_tst_births_georgia.csv  georgian_tst_burials_didube.csv  georgian_tst_deaths_in_tbilisi.csv  georgian_tst_football_players.csv  georgian_tst_historians.csv  georgian_tst_honorary_citizens_tbilisi.csv  georgian_tst_opera_theater_people.csv  georgian_tst_players_dinamo.csv  georgian_tst_players_locomotive.csv  georgian_tst_rustaveli_award_winners.csv  georgian_tst_scientists.csv  georgian_tst_script_writers.csv  georgian_tst_tbilisi_art_academy_graduates.csv  georgian_tst_tbilisi_artillery_school_graduates.csv  georgian_tst_tbilisi_conservatory_graduates.csv  georgian_tst_tbilisi_uni_graduates.csv  georgian_tst_technical_uni_graduates.csv  georgian_tst_theater_uni_graduates.csv  georgian_tst_uch_sobranie_members.csv  georgian_tst_writers.csv  scraper.py
tests/: test_cislang.py
